extra padding on stop page

--- a/client/scss/stop.scss
+++ b/client/scss/stop.scss
@@ -7,9 +7,7 @@ $departure-count: 3;
 main {
   @include template.page-centerer;
   .page-centered {
-    padding-top: 2rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 2rem 1rem;
 
     > h1 {
       font-weight: bold;
